Added more info

--- a/WebInterface/help.html
+++ b/WebInterface/help.html
@@ -117,6 +117,10 @@
 		margin-left: 15px;
 	}
 
+	main #WAQ > div:last-child {
+		background-color: white;
+	}
+
 	footer {
 		left: 0;
 		bottom: 0;
@@ -421,11 +425,11 @@
 			<div>
 				<b>How do I set this up?</b>
 				<p>
-					There are four steps:
+					<a href="https://www.youtube.com/watch?v=UOG_lOcmQlo">You can watch this video</a> or follow these four steps:
 
 					<ol>
 						<li>Install <a href="https://nodejs.org/en/download/package-manager/">node.js</a></li>
-						<li>Clone or download the <a href="https://github.com/jantje19/MusicStream/">Github repo</a></li>
+						<li>Download the <a href="https://github.com/jantje19/MusicStream/releases/latest">latest release</a> from the GitHub repo (zip file can be found at the bottom)</li>
 						<li>Within the directory run: <code>npm install &amp;&amp; npm start</code> in a CLI</li>
 						<li>Go to <a href="http://localhost:8000">http://localhost:8000</a></li>
 					</ol>
