--- a/WebInterface/downloadYoutube.html
+++ b/WebInterface/downloadYoutube.html
@@ -263,7 +263,7 @@
 
 			if (document.getElementById('typeAudio').checked)
 				type = 'audio';
-			else if (document.document.getElementById('typeVideo').checked)
+			else if (document.getElementById('typeVideo').checked)
 				type = 'video';
 			else
 				alert('No type selected somehow...\nYou should refresh the page.');
