Updated Help file

--- a/WebInterface/Video/index.html
+++ b/WebInterface/Video/index.html
@@ -61,7 +61,7 @@
 
 				<div id="controls">
 					<div style="float: left">
-						<button id="playPause"><img src="Assets/ic_play_arrow_white.svg"></button>
+						<button title="play/pause video" id="playPause"><img src="Assets/ic_play_arrow_white.svg"></button>
 					</div>
 
 					<div style="width: 79%; display: inline-block;">
@@ -71,7 +71,7 @@
 					</div>
 
 					<div style="float: right">
-						<button id="fullScreen"><img src="Assets/ic_fullscreen_white.svg"></button>
+						<button title="Fullscreen toggle" id="fullScreen"><img src="Assets/ic_fullscreen_white.svg"></button>
 					</div>
 				</div>
 
