--- a/WebInterface/help.html
+++ b/WebInterface/help.html
@@ -259,10 +259,36 @@
 				<button><img src="/Assets/ic_keyboard_arrow_up_white.svg"></button>
 			</div>
 
-			<div maxHeight="80">
+			<div maxHeight="530">
+				<h3>Features</h3>
+
 				<p>
-					This function is out of alpha! If you have any improvements: <a href="https://github.com/jantje19/MusicStream/issues/new">GitHub</a>.<br>
-					More documentation soon.
+					The video page shows a basic video player. You can drag videos from the right hand side menu to the queue or use CTRL+Click.
+				</p>
+
+				<hr>
+
+				<h3>Supported extensions</h3>
+
+				<p>
+					By default the supported file extension is <i>'mp4'</i>. But you can add or remove extensions on the <a href="/settings/">settings page</a>. Take into account that not every browser supports the same file extensions.
+				</p>
+
+				<hr>
+
+				<h3>Buttons</h3>
+
+				<p>
+					The interface consists of various buttons. The purpose of every button is explained as a title that will appear when you hover over it.
+				</p>
+
+				<hr>
+
+				<h3>Mobile phone support</h3>
+
+				<p>
+					The interface is not (yet) designed for small screens. However, it still can be used on mobile phones.<br>
+					The web interface has a manifest for adding it to the home screen.
 				</p>
 			</div>
 		</div>
