--- a/WebInterface/help.html
+++ b/WebInterface/help.html
@@ -449,50 +449,64 @@
 			</div>
 		</div>
 
-
-		<div id="WAQ">
-			<h3>WAQ</h3>
-
+		<div>
 			<div>
-				<b>How do I set this up?</b>
-				<p>
-					<a href="https://www.youtube.com/watch?v=UOG_lOcmQlo">You can watch this video</a> or follow these four steps:
-
-					<ol>
-						<li>Install <a href="https://nodejs.org/en/download/package-manager/">node.js</a></li>
-						<li>Download the <a href="https://github.com/jantje19/MusicStream/releases/latest">latest release</a> from the GitHub repo (zip file can be found at the bottom)</li>
-						<li>Within the directory run: <code>npm install &amp;&amp; npm start</code> in a CLI</li>
-						<li>Go to <a href="http://localhost:8000">http://localhost:8000</a></li>
-					</ol>
-				</p>
+				<h2>Plugins</h2>
+				<button><img src="/Assets/ic_keyboard_arrow_up_white.svg"></button>
 			</div>
 
-			<div>
-				<b>I have found a bug, what do I do?</b>
+			<div maxHeight="50">
 				<p>
-					Bugs can be reported on the <a href="https://github.com/Jantje19/MusicStream/issues/new/">Github issue tracker</a> with the <i style="background-color: red">bug</i> label. Please be so thoughtful to try to recreate the bug and submit an as detailed as possible explaination. Screenshots are always appreciated.
-				</p>
-			</div>
-
-			<div>
-				<b>I have an amazing idea for this program</b>
-				<p>
-					Ideas are always welcome. You can add an <a href="https://github.com/Jantje19/MusicStream/issues/new/">issue on Github</a> with the <i style="background-color: yellow">idea</i> tag.
-				</p>
-			</div>
-
-			<div>
-				<b>Can I help the development?</b>
-				<p>
-					You sure can. All the support is greatly appreciated. I am currently maintaining this on my own. Every designer, product developer, software engenierer or other help is always helpfull. Even pointing out spelling mistakes is super useful. You can fork this project on <a href="https://github.com/jantje19/MusicStream/">Github</a>.
+					All the information can be found <a href="https://github.com/jantje19/MusicStream-Plugins">here</a>.
 				</p>
 			</div>
 		</div>
-	</main>
+	</div>
 
-	<footer>
-		<p>&copy; Vic</p>
-	</footer>
+
+	<div id="WAQ">
+		<h3>WAQ</h3>
+
+		<div>
+			<b>How do I set this up?</b>
+			<p>
+				<a href="https://www.youtube.com/watch?v=UOG_lOcmQlo">You can watch this video</a> or follow these four steps:
+
+				<ol>
+					<li>Install <a href="https://nodejs.org/en/download/package-manager/">node.js</a></li>
+					<li>Download the <a href="https://github.com/jantje19/MusicStream/releases/latest">latest release</a> from the GitHub repo (zip file can be found at the bottom)</li>
+					<li>Within the directory run: <code>npm install &amp;&amp; npm start</code> in a CLI</li>
+					<li>Go to <a href="http://localhost:8000">http://localhost:8000</a></li>
+				</ol>
+			</p>
+		</div>
+
+		<div>
+			<b>I have found a bug, what do I do?</b>
+			<p>
+				Bugs can be reported on the <a href="https://github.com/Jantje19/MusicStream/issues/new/">Github issue tracker</a> with the <i style="background-color: red">bug</i> label. Please be so thoughtful to try to recreate the bug and submit an as detailed as possible explaination. Screenshots are always appreciated.
+			</p>
+		</div>
+
+		<div>
+			<b>I have an amazing idea for this program</b>
+			<p>
+				Ideas are always welcome. You can add an <a href="https://github.com/Jantje19/MusicStream/issues/new/">issue on Github</a> with the <i style="background-color: yellow">idea</i> tag.
+			</p>
+		</div>
+
+		<div>
+			<b>Can I help the development?</b>
+			<p>
+				You sure can. All the support is greatly appreciated. I am currently maintaining this on my own. Every designer, product developer, software engenierer or other help is always helpfull. Even pointing out spelling mistakes is super useful. You can fork this project on <a href="https://github.com/jantje19/MusicStream/">Github</a>.
+			</p>
+		</div>
+	</div>
+</main>
+
+<footer>
+	<p>&copy; Vic</p>
+</footer>
 
 </body>
 </html>
