--- a/WebInterface/Audio/index.html
+++ b/WebInterface/Audio/index.html
@@ -89,6 +89,10 @@
 		box-shadow: 0 0 5px rgba(0, 0 , 0, 0.3);
 	}
 
+	header #overflowMenuHolder #overflowMenu hr {
+		margin: 0;
+	}
+
 	header #overflowMenuHolder #overflowMenu button {
 		width: 100%;
 		padding: 10px;
@@ -147,6 +151,8 @@
 					<a href="/downloadYoutube"><button>Youtube Download</button></a>
 					<a href="/help/"><button>Help / Shortcuts</button></a>
 					<a href="/settings/"><button>Settings</button></a>
+					<hr>
+					[[EXTRABUTTONS]]
 				</div>
 			</div>
 		</div>
